# bmad-runtime-dev

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .npmrc  Cargo.toml  Directory.Build.props  README.md  deny.toml  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.cargo/: config.toml
.codex/: config.toml
.config/: dotnet-tools.json
.github/: actionlint.yaml  codeql-config.yml  dependabot.yml  zizmor.yml
.github/workflows/: codeql.yml  contracts.yml  dependency-review.yml  desktop-support.yml  desktop.yml  release-dry-run.yml  release-windows-signed.yml  security-nightly.yml  source.yml  workflow-security.yml
.playwright-cli/: page-2026-07-21T18-19-52-943Z.yml  page-2026-07-21T18-20-57-987Z.yml
.superpowers/sdd/: task-3-report.md
apps/desktop-ui/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
bmad-runtime-lib/: 00 - Common Rules and Product Shape.md  01 - First Build - Executable Vertical Slice.md  02 - Locked Architecture Decisions.md  03 - Repository and Vault Usage.md  04 - Review Findings and Changelog.md  05 - Preserved Source Context.md  06 - Preserved Critical Review.md  07 - Source Coverage Matrix.md  08 - Phased Roadmap and Build Order.md  09 - Glossary and Naming.md  10 - Chat Workbench.md  100 - BMAD Method and Builder Deep Comprehension Audit.md  11 - Runtime API Control Plane.md  12 - Run Orchestrator and Agent Kernel.md  13 - BMAD Kernel, Package Loader, and Help Advisor.md  14 - Builder Studio and SkillOps.md  15 - Artifact Creator and Presentation Adapter.md  16 - Workspace Service.md  17 - Workspace Intelligence and Context Packs.md  18 - Model Gateway and Microsoft Foundry.md  19 - Airlock Policy and Approvals.md  20 - Execution Lanes and Container App Jobs.md  21 - Trace, Evidence, and Observability.md  22 - Data Model - SQL and Blob.md  23 - Security, Identity, and Secrets.md  24 - Operator Console and Operations.md  25 - OpenAPI, Schemas, and Generated Clients.md  26 - Frontend Design System.md  27 - Testing, Validation, and Replay.md  28 - Supply Chain, Deployment, and IaC.md  29 - Concurrency, Transactions, and Failures.md  30 - Implementation Epics and Backlog.md  31 - Architecture Decision Records.md  32 - Integration Contract Map.md  33 - Release Gates and Acceptance Matrix.md  34 - Canonical Object Model.md  35 - Source Alignment Notes.md  36 - Local Development and DevEx.md  37 - Azure Environments and Deployment Runbooks.md  38 - Worker Images and Command DSL.md  (+68 more)
bmad-runtime-lib/.obsidian/: app.json  bookmarks.json  graph.json  workspace.json
crates/desktop-airlock/: Cargo.toml
crates/desktop-airlock/src/: lib.rs
crates/desktop-app/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
crates/desktop-app/capabilities/: main.json
crates/desktop-app/icons/: icon.icns
crates/desktop-app/src/: bmad_capability_host.rs  bmad_foundation.rs  bmad_governed_proposal.rs  bmad_model.rs  commands.rs  edits.rs  lib.rs  main.rs  recovery.rs  state.rs  update.rs  wire.rs
crates/desktop-app/src/bmad_model/: bridge.rs  bridge_tests.rs  capability_coordinator.rs  capability_coordinator_tests.rs  config.rs  context.rs  coordinator.rs  coordinator_tests.rs  transport.rs  verification.rs
crates/desktop-cloud/: Cargo.toml
crates/desktop-cloud/src/: broker_protocol.rs  composition.rs  entitlement.rs  identity.rs  installation_identity.rs  lib.rs  model.rs  production.rs  production_round_trip.rs  support_contract.rs  transport.rs  windows_broker.rs
crates/desktop-cloud/tests/: broker_protocol.rs  composition_modes.rs  consent_envelope_vector.rs  entitlement_verification.rs  identity_session.rs  installation_identity_windows.rs  model_verification.rs  production_lifecycle.rs  production_round_trip.rs  stage_exchange.rs  support_projection.rs  support_transport.rs
crates/desktop-egress/: Cargo.toml
crates/desktop-egress/src/: consent.rs  lib.rs  manifest.rs  preparation.rs
crates/desktop-egress/tests/: consent.rs  manifest.rs  preparation.rs
crates/desktop-runtime/: Cargo.toml
crates/desktop-runtime/src/: command.rs  domain.rs  edits.rs  error.rs  hash.rs  ids.rs  lib.rs  strict_json.rs
crates/desktop-runtime/src/bmad/: binding.rs  builder.rs  builder_ports.rs  capability.rs  catalog.rs  config.rs  error.rs  help.rs  help_binding.rs  help_materialization.rs  help_run.rs  help_session.rs  kernel_error.rs  method.rs  mod.rs  package.rs  ports.rs  service.rs
crates/desktop-runtime/tests/: bmad_builder_authoring.rs  bmad_capability.rs  bmad_catalog.rs  bmad_help_materialization.rs  bmad_help_run.rs  bmad_help_session.rs  bmad_kernel.rs  bmad_method_session.rs  projection_event_fixtures.rs
crates/desktop-store/: Cargo.toml
crates/desktop-store/src/: bmad_builder.rs  bmad_capability.rs  bmad_method.rs  execution.rs  lib.rs  migrations.rs
crates/desktop-store/tests/: bmad_builder_store.rs  bmad_capability_store.rs  bmad_help_run_store.rs  bmad_method_store.rs  execution_store.rs  local_identity.rs
crates/desktop-workspace/: Cargo.toml
crates/desktop-workspace/src/: bmad_snapshot.rs  git.rs  governed_io.rs  lib.rs
crates/desktop-workspace/tests/: bmad_snapshot.rs
docs/: frontend-evolution-2026-07-18.md
tests/conformance/rust/: Cargo.toml
tests/conformance/rust/src/: lib.rs
tests/conformance/rust/tests/: bmad_contracts.rs
tests/generator-qualification/rust/: Cargo.toml
tests/generator-qualification/rust/src/: lib.rs
tests/generator-qualification/rust/tests/: qualification.rs
tools/: build-signed-windows-installer.ps1  check-boundaries.mjs  check-boundaries.test.mjs  check-readiness-scorecard.mjs  check-readiness-scorecard.test.mjs  check-secrets.mjs  check-secrets.test.mjs  check-toolchain.mjs  check-workflows.test.mjs  create-release-attestation-predicate.mjs  generate-release-sbom.mjs  qualify-windows-installer.ps1  release-attestation-predicate.test.mjs  release-metadata.test.mjs  release-sbom.test.mjs  resolve-release-metadata.mjs  verify-reference-vault.mjs
(+322 files in other folders)
