[workspace]
members = [
  "crates/desktop-app",
  "crates/desktop-ipc",
  "crates/desktop-runtime",
  "crates/desktop-workspace",
  "crates/desktop-airlock",
  "crates/desktop-egress",
  "crates/desktop-execution",
  "crates/desktop-store",
  "crates/desktop-cloud",
  "crates/desktop-update",
  "tests/generator-qualification/rust",
  "tests/conformance/rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97.0"
license = "LicenseRef-Proprietary"
authors = ["Sapphirus Engineering"]
publish = false

[workspace.dependencies]
aes-gcm = "=0.10.3"
async-trait = "=0.1.91"
base64 = "=0.22.1"
hex = "=0.4.3"
ignore = "=0.4.30"
jsonschema = "=0.44.1"
parking_lot = "=0.12.5"
rand = "=0.10.2"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls"] }
regress = "=0.10.5"
rusqlite = { version = "=0.37.0", features = ["backup", "bundled", "functions"] }
semver = { version = "=1.0.28", features = ["serde"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = { version = "=1.0.151", features = ["preserve_order"] }
sha2 = "=0.10.9"
subtle = "=2.6.1"
tauri = { version = "=2.11.5", default-features = false, features = ["wry"] }
tauri-build = { version = "=2.6.3" }
tauri-plugin-dialog = "=2.7.2"
tauri-plugin-opener = "=2.5.3"
gix = { version = "=0.85.0", default-features = false, features = ["status"] }
tauri-plugin-single-instance = "=2.4.3"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-window-state = "=2.4.1"
tempfile = "=3.27.0"
thiserror = "=2.0.19"
time = { version = "=0.3.54", features = ["formatting", "parsing", "serde"] }
tokio = { version = "=1.53.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
ulid = { version = "=1.2.1", features = ["serde"] }
unicode-normalization = "=0.1.25"
url = "=2.5.8"
walkdir = "=2.5.0"
windows = { version = "=0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
zeroize = { version = "=1.9.0", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
