[package]
name = "desktop-app"
description = "Sapphirus Windows desktop composition root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
desktop-airlock = { path = "../desktop-airlock" }
desktop-cloud = { path = "../desktop-cloud" }
desktop-egress = { path = "../desktop-egress" }
desktop-execution = { path = "../desktop-execution" }
desktop-ipc = { path = "../desktop-ipc" }
desktop-runtime = { path = "../desktop-runtime" }
desktop-store = { path = "../desktop-store" }
desktop-update = { path = "../desktop-update" }
desktop-workspace = { path = "../desktop-workspace" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-updater.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
