[package]
name = "desktop-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
deterministic-fake = []

[dependencies]
async-trait.workspace = true
desktop-egress = { path = "../desktop-egress" }
desktop-runtime = { path = "../desktop-runtime" }
hex.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
zeroize.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
