[package]
name = "desktop-egress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
desktop-runtime = { path = "../desktop-runtime" }
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
