[package]
name = "desktop-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
desktop-runtime = { path = "../desktop-runtime" }
gix.workspace = true
ignore.workspace = true
parking_lot.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
ulid.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_WindowsProgramming"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
