[package]
name = "sapphirus-generator-qualification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
desktop-runtime = { path = "../../../crates/desktop-runtime" }
jsonschema = "=0.48.1"
regress.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
